feat: - 유저 권한 반영(memberRole엔티티) - 초기 데이터 입력시 memberRole 추가 삽입